--- a/AUTHORS
+++ b/AUTHORS
@@ -16,6 +16,9 @@ Desktop
     Copyright © 2013 François Vogelweith (Bisigi project)
     Copyright © 2014 Joseph "Rowen Stipe" Krieger <rowen.stipe@gmail.com>
 
+ - Stripes.png
+    Copyright © 2010 Jakub Steiner <jimmac@novell.com>
+
 Nature
  - Aqua.jpg:
     Copyright © 2008 Charles Barbin <barbinch@free.fr>
@@ -24,7 +27,7 @@ Nature
     Copyright © 2008 Lennart Poettering <mztabzr@0pointer.de>
     Copyright © 2008 Andrea Cimitan
 
- - Dunes.jpg:
+ - Dune.jpg:
     Copyright © 2007 Marco Cogoni <cogoni@gmail.com>
     Copyright © 2008 Hylke Bons <hylkebons@gmail.com>
 
@@ -47,7 +50,7 @@ Nature
  - Storm.jpg:
     Copyright © 2008 Sergey Nazarov <phearnot@renee.ru>
 
- - TwoWings.jpg: Charles Barbin <barbinch@free.fr>
+ - TwoWings.jpg:
     Copyright © 2008 Charles Barbin <barbinch@free.fr>
     Copyright © 2008 Hylke Bons <hylkebons@gmail.com>
 
