--- a/po/ky.po
+++ b/po/ky.po
@@ -1,77 +1,112 @@
-# Translation of mate-backgrounds.HEAD.ky.po to
-# This file is distributed under the same license as the mate-backgrounds package.
-# Ilyas Bakirov <just_ilyas@yahoo.com>, 2005.
-#
+# SOME DESCRIPTIVE TITLE.
+# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
+# This file is distributed under the same license as the PACKAGE package.
+# 
+# Translators:
+# chingis, 2013
+# Ilyas Bakirov <just_ilyas@yahoo.com>, 2005
+# chingis, 2013
 msgid ""
 msgstr ""
-"Project-Id-Version: mate-backgrounds 2.12.1\n"
+"Project-Id-Version: MATE Desktop Environment\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-10-31 06:03+0100\n"
-"PO-Revision-Date: 2005-11-01 00:04+0500\n"
-"Last-Translator: Ilyas Bakirov <just_ilyas@yahoo.com>\n"
-"Language-Team: Kirghiz\n"
+"POT-Creation-Date: 2012-07-07 12:01+0200\n"
+"PO-Revision-Date: 2013-04-22 01:52+0000\n"
+"Last-Translator: chingis\n"
+"Language-Team: Kirgyz (http://www.transifex.com/projects/p/MATE/language/ky/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.9.1\n"
+"Language: ky\n"
+"Plural-Forms: nplurals=1; plural=0;\n"
 
-#. Translators: This is the name of a desktop background image that shows a large aqua coloured (light blue) MATE foot.
+#. From http://code.google.com/p/gnome-colors/
+#: ../abstract/mate-abstract.xml.in.in.h:2
+msgid "Arc"
+msgstr "Арка"
+
+#: ../abstract/mate-abstract.xml.in.in.h:3
+msgid "Flow"
+msgstr "Агын"
+
+#: ../abstract/mate-abstract.xml.in.in.h:4
+msgid "Gulp"
+msgstr "Ууртам"
+
+#: ../abstract/mate-abstract.xml.in.in.h:5
+msgid "Silk"
+msgstr "Жибек"
+
+#: ../abstract/mate-abstract.xml.in.in.h:6
+msgid "Spring"
+msgstr "Жаз"
+
+#: ../abstract/mate-abstract.xml.in.in.h:7
+msgid "Waves"
+msgstr "Толкундар"
+
+#: ../desktop/mate-desktop.xml.in.in.h:1
+msgid "No Desktop Background"
+msgstr "Фону жок"
+
+#: ../desktop/mate-desktop.xml.in.in.h:2
+msgid "Green Traditional"
+msgstr "Салттуу жашыл"
+
+#: ../desktop/mate-desktop.xml.in.in.h:3
+msgid "Stripes"
+msgstr "Тилкелер"
+
+#. Translators: This is the name of a desktop background image that shows an
+#. orange/red flower.
 #. You might want to translate it into the equivalent words of your language
-#: ../branded/mate-branded.xml.in.in.h:3
-msgid "Aqua Foot (MATE Branded)"
-msgstr "Суулуу тапан (MATE логотиби менен)"
+#: ../nature/mate-nature.xml.in.in.h:3
+msgid "Fresh Flower"
+msgstr "Жаңы гүл"
 
-#. Translators: This is the name of a desktop background image that shows a picture of an island called Fraser Island.
+#. Translators: This is the name of a desktop background image that shows a
+#. green meadow.
 #. You might want to translate it into the equivalent words of your language
-#: ../branded/mate-branded.xml.in.in.h:6
-msgid "Fraser Island (MATE Branded)"
-msgstr "Фрейзер аралы (MATE логотиби менен)"
+#: ../nature/mate-nature.xml.in.in.h:6
+msgid "Green Meadow"
+msgstr "Көк чыбынды"
 
-#. Translators: This is the name of a desktop background image that shows a mixture of blurred red and orange colours.
-#. You might want to translate it into the equivalent words of your language
-#: ../branded/mate-branded.xml.in.in.h:9
-msgid "Red Blurred (MATE Branded)"
-msgstr "Кызыл туман (MATE логотиби менен)"
+#: ../nature/mate-nature.xml.in.in.h:7
+msgid "Aqua"
+msgstr "Суу"
 
-#. Translators: This is the name of a desktop background image that shows a mixture of mainly red and orange colours.
-#. You might want to translate it into the equivalent words of your language
-#: ../branded/mate-branded.xml.in.in.h:12
-msgid "Weird Colors (MATE Branded)"
-msgstr "Сырдуу түстөр (MATE логотиби менен)"
+#: ../nature/mate-nature.xml.in.in.h:8
+msgid "Dune"
+msgstr "Дөбө"
 
-#. Translators: This is the name of a desktop background image that shows a strange "alien" like pattern.
-#. You might want to translate it into the equivalent words of your language
-#: ../tiles/mate-tiles.xml.in.in.h:3
-msgid "Alien Artifact (Translucent Tile)"
-msgstr "Бөлөк планеталык артефакт (жарым тунук сайма)"
+#: ../nature/mate-nature.xml.in.in.h:9
+msgid "Storm"
+msgstr "Шторм"
 
-#. Translators: This is the name of a desktop background image that shows a pattern similar to that associated with cow skin.
-#. You might want to translate it into the equivalent words of your language
-#: ../tiles/mate-tiles.xml.in.in.h:6
-msgid "Cow Spots (Translucent Tile)"
-msgstr "Ала уй (жарым тунук сайма)"
+#: ../nature/mate-nature.xml.in.in.h:10
+msgid "Two Wings"
+msgstr "Эки канат"
 
-#. Translators: This is the name of a desktop background image that shows a diamond pattern.
-#. You might want to translate it into the equivalent words of your language
-#: ../tiles/mate-tiles.xml.in.in.h:9
-msgid "Diamond Tile Pattern (Translucent Tile)"
-msgstr "Бриллианттар (жарым тунук сайма)"
+#: ../nature/mate-nature.xml.in.in.h:11
+msgid "Lady Bird"
+msgstr "Эл кайда көчөт"
 
-#. Translators: This is the name of a desktop background image that shows some ellipsis.
-#. You might want to translate it into the equivalent words of your language
-#: ../translucent/mate-translucent.xml.in.in.h:3
-msgid "Ellipsis (Translucent)"
-msgstr "Эллипстер (жарым тунук)"
+#: ../nature/mate-nature.xml.in.in.h:12
+msgid "Blinds"
+msgstr "Жалюзи"
 
-#. Translators: This is the name of a desktop background image that shows blurred rectangles.
-#. You might want to translate it into the equivalent words of your language
-#: ../translucent/mate-translucent.xml.in.in.h:6
-msgid "Rectangles (Translucent)"
-msgstr "Төртбурчтуктар (жарым тунук)"
+#: ../nature/mate-nature.xml.in.in.h:13
+msgid "Rain Drops"
+msgstr "Жаан тамчылары"
 
-#. Translators: This is the name of a desktop background image that shows some wavey lines that appear like tentacles.
-#. You might want to translate it into the equivalent words of your language
-#: ../translucent/mate-translucent.xml.in.in.h:9
-msgid "Tentacles (Translucent)"
-msgstr "Кыпчыгыч (жарым тунук)"
+#: ../nature/mate-nature.xml.in.in.h:14
+msgid "Yellow Flower"
+msgstr "Сары гүл"
 
+#: ../nature/mate-nature.xml.in.in.h:15
+msgid "Garden"
+msgstr "Бак"
+
+#: ../nature/mate-nature.xml.in.in.h:16
+msgid "Wood"
+msgstr "Жыгач"
