--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -3,24 +3,26 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
-# Alexandre Folle de Menezes <afmenez@terra.com.br>, 2006.
-# Evandro Fernandes Giovanini <evandrofg@ig.com.br>, 2006.
-# Fabrizzio Soares <fabrizzio.soares@gmail.com>, 2012.
-# Og Maciel <ogmaciel@gnome.org>, 2008.
-# Raphael Higino <raphaelh@uai.com.br>, 2005.
+# Alexandre Folle de Menezes <afmenez@terra.com.br>, 2006
+# Evandro Fernandes Giovanini <evandrofg@ig.com.br>, 2006
+# Fabrizzio Alphonsus Soares <fabrizzio.soares@gmail.com>, 2012
+# Pygmalion, 2014
+# Og Maciel <ogmaciel@gnome.org>, 2008
+# Raphael Higino <raphaelh@uai.com.br>, 2005
+# vitorgatti <vitorgatti@yahoo.com.br>, 2012
 msgid ""
 msgstr ""
 "Project-Id-Version: MATE Desktop Environment\n"
-"Report-Msgid-Bugs-To: https://github.com/mate-desktop/\n"
+"Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-07-07 12:01+0200\n"
-"PO-Revision-Date: 2012-07-07 10:02+0000\n"
-"Last-Translator: Stefano Karapetsas <stefano@karapetsas.com>\n"
+"PO-Revision-Date: 2014-01-13 04:17+0000\n"
+"Last-Translator: Pygmalion\n"
 "Language-Team: Portuguese (Brazil) (http://www.transifex.com/projects/p/MATE/language/pt_BR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: pt_BR\n"
-"Plural-Forms: nplurals=2; plural=(n > 1)\n"
+"Plural-Forms: nplurals=2; plural=(n > 1);\n"
 
 #. From http://code.google.com/p/gnome-colors/
 #: ../abstract/mate-abstract.xml.in.in.h:2
@@ -49,11 +51,11 @@ msgstr "Ondas"
 
 #: ../desktop/mate-desktop.xml.in.in.h:1
 msgid "No Desktop Background"
-msgstr ""
+msgstr "Sem plano de fundo na área de trabalho"
 
 #: ../desktop/mate-desktop.xml.in.in.h:2
 msgid "Green Traditional"
-msgstr ""
+msgstr "Verde tradicional"
 
 #: ../desktop/mate-desktop.xml.in.in.h:3
 msgid "Stripes"
