--- a/po/fa.po
+++ b/po/fa.po
@@ -3,57 +3,58 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
-# Elnaz Sarbar <elnaz@farsiweb.info>, 2005.
+# Elnaz Sarbar <elnaz@farsiweb.info>, 2005
+# Mohammadreza Abdollahzadeh <morealaz@gmail.com>, 2014
 msgid ""
 msgstr ""
 "Project-Id-Version: MATE Desktop Environment\n"
-"Report-Msgid-Bugs-To: https://github.com/mate-desktop/\n"
+"Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-07-07 12:01+0200\n"
-"PO-Revision-Date: 2012-07-07 10:02+0000\n"
-"Last-Translator: Stefano Karapetsas <stefano@karapetsas.com>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"PO-Revision-Date: 2014-02-15 11:51+0000\n"
+"Last-Translator: Mohammadreza Abdollahzadeh <morealaz@gmail.com>\n"
+"Language-Team: Persian (http://www.transifex.com/projects/p/MATE/language/fa/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: fa\n"
-"Plural-Forms: nplurals=1; plural=0\n"
+"Plural-Forms: nplurals=1; plural=0;\n"
 
 #. From http://code.google.com/p/gnome-colors/
 #: ../abstract/mate-abstract.xml.in.in.h:2
 msgid "Arc"
-msgstr ""
+msgstr "کمان"
 
 #: ../abstract/mate-abstract.xml.in.in.h:3
 msgid "Flow"
-msgstr ""
+msgstr "جریان"
 
 #: ../abstract/mate-abstract.xml.in.in.h:4
 msgid "Gulp"
-msgstr ""
+msgstr "جرعه"
 
 #: ../abstract/mate-abstract.xml.in.in.h:5
 msgid "Silk"
-msgstr ""
+msgstr "ابریشم"
 
 #: ../abstract/mate-abstract.xml.in.in.h:6
 msgid "Spring"
-msgstr ""
+msgstr "جهش"
 
 #: ../abstract/mate-abstract.xml.in.in.h:7
 msgid "Waves"
-msgstr ""
+msgstr "امواج"
 
 #: ../desktop/mate-desktop.xml.in.in.h:1
 msgid "No Desktop Background"
-msgstr ""
+msgstr "بدون پس زمینه میزکاری"
 
 #: ../desktop/mate-desktop.xml.in.in.h:2
 msgid "Green Traditional"
-msgstr ""
+msgstr "سنتی سبز"
 
 #: ../desktop/mate-desktop.xml.in.in.h:3
 msgid "Stripes"
-msgstr ""
+msgstr "نوارها"
 
 #. Translators: This is the name of a desktop background image that shows an
 #. orange/red flower.
@@ -71,40 +72,40 @@ msgstr "مرتع سرسبز"
 
 #: ../nature/mate-nature.xml.in.in.h:7
 msgid "Aqua"
-msgstr ""
+msgstr "آب"
 
 #: ../nature/mate-nature.xml.in.in.h:8
 msgid "Dune"
-msgstr ""
+msgstr "تل شنی"
 
 #: ../nature/mate-nature.xml.in.in.h:9
 msgid "Storm"
-msgstr ""
+msgstr "طوفان"
 
 #: ../nature/mate-nature.xml.in.in.h:10
 msgid "Two Wings"
-msgstr ""
+msgstr "دو بال"
 
 #: ../nature/mate-nature.xml.in.in.h:11
 msgid "Lady Bird"
-msgstr ""
+msgstr "کفشدوزک"
 
 #: ../nature/mate-nature.xml.in.in.h:12
 msgid "Blinds"
-msgstr ""
+msgstr "پرده‌ها"
 
 #: ../nature/mate-nature.xml.in.in.h:13
 msgid "Rain Drops"
-msgstr ""
+msgstr "قطرات باران"
 
 #: ../nature/mate-nature.xml.in.in.h:14
 msgid "Yellow Flower"
-msgstr ""
+msgstr "گل زرد"
 
 #: ../nature/mate-nature.xml.in.in.h:15
 msgid "Garden"
-msgstr ""
+msgstr "بوستان"
 
 #: ../nature/mate-nature.xml.in.in.h:16
 msgid "Wood"
-msgstr ""
+msgstr "چوب"
