--- a/AUTHORS
+++ b/AUTHORS
@@ -16,6 +16,9 @@ Desktop
     Copyright © 2013 François Vogelweith (Bisigi project)
     Copyright © 2014 Joseph "Rowen Stipe" Krieger <rowen.stipe@gmail.com>
 
+ - MATE-Stripes-Dark.png, MATE-Stripes-Light.png
+    Copyright © 2014 Adam Erdman <hekel@archlinux.info>
+
  - Stripes.png
     Copyright © 2010 Jakub Steiner <jimmac@novell.com>
 
