--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+1.9.0
+  * Add new MATE-Stripes-Dark.png, MATE-Stripes-Light.png wallpapers by hekel
+
 1.8.0
   * Add new "Float into MATE" wallpaper by Rowen Stipe
   * Add artist tag in XML files
