Sync translations with transifex

--- a/po/hi.po
+++ b/po/hi.po
@@ -3,26 +3,27 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
-# G Karunakar <karunakar@indlinux.org>, 2006.
-# Rajesh Ranjan <rranjan@redhat.com>, 2009.
+# Karunakar Guntupalli <karunakar@indlinux.org>, 2006
+# Sadgamaya <g.raghavan.g@gmail.com>, 2014
+# Rajesh Ranjan <rranjan@redhat.com>, 2009
 msgid ""
 msgstr ""
 "Project-Id-Version: MATE Desktop Environment\n"
-"Report-Msgid-Bugs-To: https://github.com/mate-desktop/\n"
+"Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-07-07 12:01+0200\n"
-"PO-Revision-Date: 2012-07-07 10:02+0000\n"
-"Last-Translator: Stefano Karapetsas <stefano@karapetsas.com>\n"
+"PO-Revision-Date: 2014-03-08 12:33+0000\n"
+"Last-Translator: Sadgamaya <g.raghavan.g@gmail.com>\n"
 "Language-Team: Hindi (http://www.transifex.com/projects/p/MATE/language/hi/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: hi\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #. From http://code.google.com/p/gnome-colors/
 #: ../abstract/mate-abstract.xml.in.in.h:2
 msgid "Arc"
-msgstr ""
+msgstr "वृत्ताकार"
 
 #: ../abstract/mate-abstract.xml.in.in.h:3
 msgid "Flow"
@@ -46,15 +47,15 @@ msgstr "तरंग"
 
 #: ../desktop/mate-desktop.xml.in.in.h:1
 msgid "No Desktop Background"
-msgstr ""
+msgstr "कोई डेस्कटॉप पृष्ठभूमि नहीं है"
 
 #: ../desktop/mate-desktop.xml.in.in.h:2
 msgid "Green Traditional"
-msgstr ""
+msgstr "हरा पारम्परिक"
 
 #: ../desktop/mate-desktop.xml.in.in.h:3
 msgid "Stripes"
-msgstr ""
+msgstr "धारी"
 
 #. Translators: This is the name of a desktop background image that shows an
 #. orange/red flower.
