--- a/po/de.po
+++ b/po/de.po
@@ -3,23 +3,24 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
-# Christian Kirbach <Christian.Kirbach@googlemail.com>, 2008.
-# Hendrik Brandt <heb@mate-de.org>, 2004.
-# Hendrik Richter <hendi@mate-de.org>, 2006.
-#   <lebendig2002@yahoo.de>, 2012.
+# Christian <Christian.Kirbach@googlemail.com>, 2008
+# Hendrik Brandt <heb@mate-de.org>, 2004
+# Hendrik Richter <hendi@mate-de.org>, 2006
+# crazyd <lebendig2002@yahoo.de>, 2012
+# to_ba, 2014
 msgid ""
 msgstr ""
 "Project-Id-Version: MATE Desktop Environment\n"
-"Report-Msgid-Bugs-To: https://github.com/mate-desktop/\n"
+"Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-07-07 12:01+0200\n"
-"PO-Revision-Date: 2012-07-07 10:02+0000\n"
-"Last-Translator: Stefano Karapetsas <stefano@karapetsas.com>\n"
+"PO-Revision-Date: 2014-04-20 13:10+0000\n"
+"Last-Translator: to_ba\n"
 "Language-Team: German (http://www.transifex.com/projects/p/MATE/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: de\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #. From http://code.google.com/p/gnome-colors/
 #: ../abstract/mate-abstract.xml.in.in.h:2
@@ -48,11 +49,11 @@ msgstr "Blaue Wellen"
 
 #: ../desktop/mate-desktop.xml.in.in.h:1
 msgid "No Desktop Background"
-msgstr ""
+msgstr "Kein Schreibtischhintergrund"
 
 #: ../desktop/mate-desktop.xml.in.in.h:2
 msgid "Green Traditional"
-msgstr ""
+msgstr "Traditionelles Grün"
 
 #: ../desktop/mate-desktop.xml.in.in.h:3
 msgid "Stripes"
