Add Ubuntu MATE Wallpapers without branding

--- a/AUTHORS
+++ b/AUTHORS
@@ -22,6 +22,10 @@ Desktop
  - Stripes.png
     Copyright © 2010 Jakub Steiner <jimmac@novell.com>
 
+ - Ubuntu-Mate-Cold-no-logo.png, Ubuntu-Mate-Dark-no-logo.png,
+   Ubuntu-Mate-Radioactive-no-logo.png, Ubuntu-Mate-Warm-no-logo.png:
+    Copyright © 2014 Goce Mitevski <contact@nicer2.com>
+
 Nature
  - Aqua.jpg:
     Copyright © 2008 Charles Barbin <barbinch@free.fr>
