--- a/po/ast.po
+++ b/po/ast.po
@@ -3,6 +3,7 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
+# Ḷḷumex03 <tornes@opmbx.org>, 2014
 # Xandru <xandru@softastur.org>, 2010
 # Xuacu Saturio <xuacusk8@gmail.com>, 2012-2013
 msgid ""
@@ -10,8 +11,8 @@ msgstr ""
 "Project-Id-Version: MATE Desktop Environment\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-07-07 12:01+0200\n"
-"PO-Revision-Date: 2013-01-21 23:45+0000\n"
-"Last-Translator: Xuacu Saturio <xuacusk8@gmail.com>\n"
+"PO-Revision-Date: 2014-06-13 07:26+0000\n"
+"Last-Translator: Ḷḷumex03 <tornes@opmbx.org>\n"
 "Language-Team: Asturian (http://www.transifex.com/projects/p/MATE/language/ast/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -80,7 +81,7 @@ msgstr "Duna"
 
 #: ../nature/mate-nature.xml.in.in.h:9
 msgid "Storm"
-msgstr "Tremolina"
+msgstr "Tuena"
 
 #: ../nature/mate-nature.xml.in.in.h:10
 msgid "Two Wings"
