--- a/po/af.po
+++ b/po/af.po
@@ -3,22 +3,22 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
-# Friedel Wolff <friedel BY translate.org.za>, 2007.
-# F Wolff <friedel@translate.org.za>, 2009.
-#   <nato323@gmail.com>, 2012.
+# Friedel Wolff <friedel BY translate.org.za>, 2007
+# F Wolff <friedel@translate.org.za>, 2009
+# nato323 <nato323@gmail.com>, 2012
 msgid ""
 msgstr ""
 "Project-Id-Version: MATE Desktop Environment\n"
-"Report-Msgid-Bugs-To: https://github.com/mate-desktop/\n"
+"Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-07-07 12:01+0200\n"
 "PO-Revision-Date: 2012-07-07 10:02+0000\n"
 "Last-Translator: Stefano Karapetsas <stefano@karapetsas.com>\n"
-"Language-Team: Afrikaans (http://www.transifex.com/projects/p/MATE/language/af/)\n"
+"Language-Team: Afrikaans (http://www.transifex.com/mate/MATE/language/af/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: af\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #. From http://code.google.com/p/gnome-colors/
 #: ../abstract/mate-abstract.xml.in.in.h:2
