--- a/po/ar.po
+++ b/po/ar.po
@@ -6,7 +6,7 @@
 # Copyright (C) 2005 THE PACKAGE'S COPYRIGHT HOLDER, 2005
 # Djihed Afifi <djihed@gmail.com>, 2006
 # Khaled Hosny <khaledhosny@eglug.org>, 2006-2008
-# moceap <moceap@hotmail.com>, 2013
+# Mosaab Alzoubi <moceap@hotmail.com>, 2013
 # noureddin <noureddin@barid.com>, 2012
 # noureddin <noureddin@barid.com>, 2012
 # Usama Akkad <uak@aya.sy>, 2008
@@ -17,7 +17,7 @@ msgstr ""
 "POT-Creation-Date: 2012-07-07 12:01+0200\n"
 "PO-Revision-Date: 2013-10-05 14:59+0000\n"
 "Last-Translator: mauron\n"
-"Language-Team: Arabic (http://www.transifex.com/projects/p/MATE/language/ar/)\n"
+"Language-Team: Arabic (http://www.transifex.com/mate/MATE/language/ar/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
