--- a/po/bn.po
+++ b/po/bn.po
@@ -3,24 +3,24 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
-# Israt Jahan <israt@ankur.org.bd>, 2010.
-# Khandakar Mujahidul Islam <suzan@bengalinux.org>, 2007.
-# Mahay Alam Khan <makl10n@yahoo.com>, 2005.
-# Sadia Afroz <sadia@ankur.org.bd>, 2010.
-# Samia Niamatullah <mailsamia2001@yahoo.com>, 2005.
+# Israt Jahan <israt@ankur.org.bd>, 2010
+# Khandakar Mujahidul Islam <suzan@bengalinux.org>, 2007
+# Mahay Alam Khan <makl10n@yahoo.com>, 2005
+# Sadia Afroz <sadia@ankur.org.bd>, 2010
+# Samia Niamatullah <mailsamia2001@yahoo.com>, 2005
 msgid ""
 msgstr ""
 "Project-Id-Version: MATE Desktop Environment\n"
-"Report-Msgid-Bugs-To: https://github.com/mate-desktop/\n"
+"Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-07-07 12:01+0200\n"
 "PO-Revision-Date: 2012-07-07 10:02+0000\n"
 "Last-Translator: Stefano Karapetsas <stefano@karapetsas.com>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"Language-Team: Bengali (http://www.transifex.com/mate/MATE/language/bn/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: bn\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #. From http://code.google.com/p/gnome-colors/
 #: ../abstract/mate-abstract.xml.in.in.h:2
