--- a/po/ca.po
+++ b/po/ca.po
@@ -3,22 +3,22 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
-# Gil Forcada <gilforcada@guifi.net>, 2008.
-# Jesús Corrius <jesus@softcatala.org>, 2005.
-# Pere Orga <gotrunks@gmail.com>, 2012.
+# Gil Forcada <gilforcada@guifi.net>, 2008
+# Jesús Corrius <jesus@softcatala.org>, 2005
+# Pere Orga <gotrunks@gmail.com>, 2012
 msgid ""
 msgstr ""
 "Project-Id-Version: MATE Desktop Environment\n"
-"Report-Msgid-Bugs-To: https://github.com/mate-desktop/\n"
+"Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-07-07 12:01+0200\n"
-"PO-Revision-Date: 2012-07-07 10:02+0000\n"
-"Last-Translator: Stefano Karapetsas <stefano@karapetsas.com>\n"
-"Language-Team: Catalan (http://www.transifex.com/projects/p/MATE/language/ca/)\n"
+"PO-Revision-Date: 2015-11-26 14:05+0000\n"
+"Last-Translator: Pere Orga <gotrunks@gmail.com>\n"
+"Language-Team: Catalan (http://www.transifex.com/mate/MATE/language/ca/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: ca\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #. From http://code.google.com/p/gnome-colors/
 #: ../abstract/mate-abstract.xml.in.in.h:2
@@ -47,11 +47,11 @@ msgstr "Ones"
 
 #: ../desktop/mate-desktop.xml.in.in.h:1
 msgid "No Desktop Background"
-msgstr ""
+msgstr "Sense fons d'escriptori"
 
 #: ../desktop/mate-desktop.xml.in.in.h:2
 msgid "Green Traditional"
-msgstr ""
+msgstr "Tradicional verd"
 
 #: ../desktop/mate-desktop.xml.in.in.h:3
 msgid "Stripes"
