--- a/po/cs.po
+++ b/po/cs.po
@@ -3,24 +3,26 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
-# Kamil Páral <ripper42@gmail.com>, 2008.
-# Lukas Novotny <lukasnov@cvs.gnome.org>, 2006.
-# Michal Procházka <>, 2012.
-# Miloslav Trmac <mitr@volny.cz>, 2004, 2005.
-# Pavel Šefránek <ps@pjoul.cz>, 2008.
+# Kamil Páral <ripper42@gmail.com>, 2008
+# Lukas Novotny <lukasnov@cvs.gnome.org>, 2006
+# Michal Procházka <mich.procha@seznam.cz>, 2012
+# Miloslav Trmač <mitr@volny.cz>, 2004, 2005
+# Ondřej Kolín <ondrej.kolin@gmail.com>, 2012
+# Pavel Šefránek <ps@pjoul.cz>, 2008
+# Stanislav Kučera <inactive+kacernator@transifex.com>, 2015
 msgid ""
 msgstr ""
 "Project-Id-Version: MATE Desktop Environment\n"
-"Report-Msgid-Bugs-To: https://github.com/mate-desktop/\n"
+"Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-07-07 12:01+0200\n"
-"PO-Revision-Date: 2012-07-07 10:02+0000\n"
-"Last-Translator: Stefano Karapetsas <stefano@karapetsas.com>\n"
-"Language-Team: Czech (http://www.transifex.com/projects/p/MATE/language/cs/)\n"
+"PO-Revision-Date: 2015-10-21 13:19+0000\n"
+"Last-Translator: Stanislav Kučera <inactive+kacernator@transifex.com>\n"
+"Language-Team: Czech (http://www.transifex.com/mate/MATE/language/cs/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: cs\n"
-"Plural-Forms: nplurals=3; plural=(n==1) ? 0 : (n>=2 && n<=4) ? 1 : 2\n"
+"Plural-Forms: nplurals=3; plural=(n==1) ? 0 : (n>=2 && n<=4) ? 1 : 2;\n"
 
 #. From http://code.google.com/p/gnome-colors/
 #: ../abstract/mate-abstract.xml.in.in.h:2
@@ -29,7 +31,7 @@ msgstr "Oblouk"
 
 #: ../abstract/mate-abstract.xml.in.in.h:3
 msgid "Flow"
-msgstr "Splývání"
+msgstr "Téci, plynout"
 
 #: ../abstract/mate-abstract.xml.in.in.h:4
 msgid "Gulp"
@@ -49,11 +51,11 @@ msgstr "Vlny"
 
 #: ../desktop/mate-desktop.xml.in.in.h:1
 msgid "No Desktop Background"
-msgstr ""
+msgstr "Žádné pozadí plochy"
 
 #: ../desktop/mate-desktop.xml.in.in.h:2
 msgid "Green Traditional"
-msgstr ""
+msgstr "Zelené tradiční"
 
 #: ../desktop/mate-desktop.xml.in.in.h:3
 msgid "Stripes"
@@ -75,11 +77,11 @@ msgstr "Zelená louka"
 
 #: ../nature/mate-nature.xml.in.in.h:7
 msgid "Aqua"
-msgstr "Vodní hladina"
+msgstr "Voda"
 
 #: ../nature/mate-nature.xml.in.in.h:8
 msgid "Dune"
-msgstr "Klasy"
+msgstr "Duna"
 
 #: ../nature/mate-nature.xml.in.in.h:9
 msgid "Storm"
@@ -87,7 +89,7 @@ msgstr "Bouře"
 
 #: ../nature/mate-nature.xml.in.in.h:10
 msgid "Two Wings"
-msgstr "Nažky"
+msgstr "Dvě křídla"
 
 #: ../nature/mate-nature.xml.in.in.h:11
 msgid "Lady Bird"
