--- a/po/da.po
+++ b/po/da.po
@@ -3,27 +3,28 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
-# Martin Willemoes Hansen <mwh@sysrq.dk>, 2004, 2005.
-# M.P. Rommedahl <lhademmor@gmail.com>, 2008.
-# Ole Laursen <olau@hardworking.dk>, 2006.
+# Joe Hansen <joedalton2@yahoo.dk>, 2012
+# Martin Willemoes Hansen <mwh@sysrq.dk>, 2004, 2005
+# M.P. Rommedahl <lhademmor@gmail.com>, 2008
+# Ole Laursen <olau@hardworking.dk>, 2006
 msgid ""
 msgstr ""
 "Project-Id-Version: MATE Desktop Environment\n"
-"Report-Msgid-Bugs-To: https://github.com/mate-desktop/\n"
+"Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-07-07 12:01+0200\n"
-"PO-Revision-Date: 2012-07-07 10:02+0000\n"
-"Last-Translator: Stefano Karapetsas <stefano@karapetsas.com>\n"
-"Language-Team: Danish (http://www.transifex.com/projects/p/MATE/language/da/)\n"
+"PO-Revision-Date: 2012-11-09 18:13+0000\n"
+"Last-Translator: Joe Hansen <joedalton2@yahoo.dk>\n"
+"Language-Team: Danish (http://www.transifex.com/mate/MATE/language/da/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: da\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #. From http://code.google.com/p/gnome-colors/
 #: ../abstract/mate-abstract.xml.in.in.h:2
 msgid "Arc"
-msgstr ""
+msgstr "Bue"
 
 #: ../abstract/mate-abstract.xml.in.in.h:3
 msgid "Flow"
@@ -47,15 +48,15 @@ msgstr "Bølger"
 
 #: ../desktop/mate-desktop.xml.in.in.h:1
 msgid "No Desktop Background"
-msgstr ""
+msgstr "Ingen skrivebordsbaggrund"
 
 #: ../desktop/mate-desktop.xml.in.in.h:2
 msgid "Green Traditional"
-msgstr ""
+msgstr "Grøn traditionel"
 
 #: ../desktop/mate-desktop.xml.in.in.h:3
 msgid "Stripes"
-msgstr ""
+msgstr "Striber"
 
 #. Translators: This is the name of a desktop background image that shows an
 #. orange/red flower.
