--- a/po/de.po
+++ b/po/de.po
@@ -7,15 +7,15 @@
 # Hendrik Brandt <heb@mate-de.org>, 2004
 # Hendrik Richter <hendi@mate-de.org>, 2006
 # crazyd <lebendig2002@yahoo.de>, 2012
-# to_ba, 2014
+# Tobias Bannert <tobannert@gmail.com>, 2014
 msgid ""
 msgstr ""
 "Project-Id-Version: MATE Desktop Environment\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-07-07 12:01+0200\n"
 "PO-Revision-Date: 2014-04-20 13:10+0000\n"
-"Last-Translator: to_ba\n"
-"Language-Team: German (http://www.transifex.com/projects/p/MATE/language/de/)\n"
+"Last-Translator: Tobias Bannert <tobannert@gmail.com>\n"
+"Language-Team: German (http://www.transifex.com/mate/MATE/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
