--- a/po/eo.po
+++ b/po/eo.po
@@ -3,25 +3,26 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
-# Michael MORONI <haikara90@gmail.com>, 2009.
+# Michael Moroni <michael.moroni@openmailbox.org>, 2012
+# Michael Moroni <michael.moroni@openmailbox.org>, 2009
 msgid ""
 msgstr ""
 "Project-Id-Version: MATE Desktop Environment\n"
-"Report-Msgid-Bugs-To: https://github.com/mate-desktop/\n"
+"Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-07-07 12:01+0200\n"
-"PO-Revision-Date: 2012-07-07 10:02+0000\n"
-"Last-Translator: Stefano Karapetsas <stefano@karapetsas.com>\n"
-"Language-Team: Esperanto (http://www.transifex.com/projects/p/MATE/language/eo/)\n"
+"PO-Revision-Date: 2012-08-14 03:32+0000\n"
+"Last-Translator: Michael Moroni <michael.moroni@openmailbox.org>\n"
+"Language-Team: Esperanto (http://www.transifex.com/mate/MATE/language/eo/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: eo\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #. From http://code.google.com/p/gnome-colors/
 #: ../abstract/mate-abstract.xml.in.in.h:2
 msgid "Arc"
-msgstr ""
+msgstr "Arko"
 
 #: ../abstract/mate-abstract.xml.in.in.h:3
 msgid "Flow"
@@ -29,7 +30,7 @@ msgstr "Fluo"
 
 #: ../abstract/mate-abstract.xml.in.in.h:4
 msgid "Gulp"
-msgstr ""
+msgstr "Gulpo"
 
 #: ../abstract/mate-abstract.xml.in.in.h:5
 msgid "Silk"
@@ -45,15 +46,15 @@ msgstr "Ondo"
 
 #: ../desktop/mate-desktop.xml.in.in.h:1
 msgid "No Desktop Background"
-msgstr ""
+msgstr "Neniu fono de labortablo"
 
 #: ../desktop/mate-desktop.xml.in.in.h:2
 msgid "Green Traditional"
-msgstr ""
+msgstr "Tradicia verdo"
 
 #: ../desktop/mate-desktop.xml.in.in.h:3
 msgid "Stripes"
-msgstr ""
+msgstr "Strioj"
 
 #. Translators: This is the name of a desktop background image that shows an
 #. orange/red flower.
@@ -91,7 +92,7 @@ msgstr "S.no Birdo"
 
 #: ../nature/mate-nature.xml.in.in.h:12
 msgid "Blinds"
-msgstr ""
+msgstr "Blindoj"
 
 #: ../nature/mate-nature.xml.in.in.h:13
 msgid "Rain Drops"
