--- a/po/es.po
+++ b/po/es.po
@@ -3,23 +3,24 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER, 2004.
-# Francisco Javier F. Serrador <serrador@cvs.gnome.org>, 2005.
-# Jorge González <jorgegonz@svn.gnome.org>, 2008.
-#   <lutusq@lutusq.jazztel.es>, 2012.
+# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER, 2004
+# Francisco Javier F. Serrador <serrador@cvs.gnome.org>, 2005
+# Jorge González <jorgegonz@svn.gnome.org>, 2008
+# Lluís Tusquellas <lutusq@gmail.com>, 2012
+# Lluís Tusquellas <lutusq@gmail.com>, 2012
 msgid ""
 msgstr ""
 "Project-Id-Version: MATE Desktop Environment\n"
-"Report-Msgid-Bugs-To: https://github.com/mate-desktop/\n"
+"Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-07-07 12:01+0200\n"
-"PO-Revision-Date: 2012-07-07 10:02+0000\n"
-"Last-Translator: Stefano Karapetsas <stefano@karapetsas.com>\n"
-"Language-Team: Spanish (Castilian) (http://www.transifex.com/projects/p/MATE/language/es/)\n"
+"PO-Revision-Date: 2012-07-07 21:38+0000\n"
+"Last-Translator: Lluís Tusquellas <lutusq@gmail.com>\n"
+"Language-Team: Spanish (http://www.transifex.com/mate/MATE/language/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #. From http://code.google.com/p/gnome-colors/
 #: ../abstract/mate-abstract.xml.in.in.h:2
@@ -48,11 +49,11 @@ msgstr "Ondas"
 
 #: ../desktop/mate-desktop.xml.in.in.h:1
 msgid "No Desktop Background"
-msgstr ""
+msgstr "No hay fondo en el escritorio"
 
 #: ../desktop/mate-desktop.xml.in.in.h:2
 msgid "Green Traditional"
-msgstr ""
+msgstr "Verde tradicional"
 
 #: ../desktop/mate-desktop.xml.in.in.h:3
 msgid "Stripes"
