--- a/po/fr.po
+++ b/po/fr.po
@@ -3,24 +3,24 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
-# Benoît Dejean <TazForEver@dlfp.org>, 2005.
-#   <mauron@vmail.me>, 2012.
-# Robert-André Mauchin <zebob.m@pengzone.org>, 2008.
-# Stéphane Raimbault <stephane.raimbault@free.fr>, 2006.
-# Thierry Moisan <thierryn@videotron.ca>, 2005.
+# Benoît Dejean <TazForEver@dlfp.org>, 2005
+# mauron, 2012
+# Robert-André Mauchin <zebob.m@pengzone.org>, 2008
+# Stéphane Raimbault <stephane.raimbault@free.fr>, 2006
+# Thierry Moisan <thierryn@videotron.ca>, 2005
 msgid ""
 msgstr ""
 "Project-Id-Version: MATE Desktop Environment\n"
-"Report-Msgid-Bugs-To: https://github.com/mate-desktop/\n"
+"Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-07-07 12:01+0200\n"
-"PO-Revision-Date: 2012-07-07 10:02+0000\n"
-"Last-Translator: Stefano Karapetsas <stefano@karapetsas.com>\n"
-"Language-Team: French (http://www.transifex.com/projects/p/MATE/language/fr/)\n"
+"PO-Revision-Date: 2012-07-11 17:14+0000\n"
+"Last-Translator: mauron\n"
+"Language-Team: French (http://www.transifex.com/mate/MATE/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: fr\n"
-"Plural-Forms: nplurals=2; plural=(n > 1)\n"
+"Plural-Forms: nplurals=2; plural=(n > 1);\n"
 
 #. From http://code.google.com/p/gnome-colors/
 #: ../abstract/mate-abstract.xml.in.in.h:2
@@ -49,11 +49,11 @@ msgstr "Vagues"
 
 #: ../desktop/mate-desktop.xml.in.in.h:1
 msgid "No Desktop Background"
-msgstr ""
+msgstr "Aucun arrière-plan de bureau"
 
 #: ../desktop/mate-desktop.xml.in.in.h:2
 msgid "Green Traditional"
-msgstr ""
+msgstr "Vert traditionnel"
 
 #: ../desktop/mate-desktop.xml.in.in.h:3
 msgid "Stripes"
