--- a/po/it.po
+++ b/po/it.po
@@ -3,23 +3,23 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
-# Flavia Weisghizzi <flavia@weisghizzi.it>, 2008.
-#   <giovanni.talorno@gmail.com>, 2012.
-# Ida Gasparretti <vampiria74@tin.it>, 2007.
-# Stefano Karapetsas <stefano@karapetsas.com>, 2012.
+# Deindre <flavia@weisghizzi.it>, 2008
+# talorno <giovanni.talorno@gmail.com>, 2012
+# Ida Gasparretti <vampiria74@tin.it>, 2007
+# Stefano Karapetsas <stefano@karapetsas.com>, 2012
 msgid ""
 msgstr ""
 "Project-Id-Version: MATE Desktop Environment\n"
-"Report-Msgid-Bugs-To: https://github.com/mate-desktop/\n"
+"Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-07-07 12:01+0200\n"
 "PO-Revision-Date: 2012-07-07 10:04+0000\n"
 "Last-Translator: Stefano Karapetsas <stefano@karapetsas.com>\n"
-"Language-Team: Italian (http://www.transifex.com/projects/p/MATE/language/it/)\n"
+"Language-Team: Italian (http://www.transifex.com/mate/MATE/language/it/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: it\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #. From http://code.google.com/p/gnome-colors/
 #: ../abstract/mate-abstract.xml.in.in.h:2
