--- a/po/ja.po
+++ b/po/ja.po
@@ -3,7 +3,7 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
-# uǝsıɯoʎ(読み専) <hallconnen2+transifex@gmail.com>, 2013
+# ABE Tsunehiko, 2013
 # Satoru SATOH <ss@gnome.gr.jp>, 2006
 # Takeshi AIHANA <takeshi.aihana@gmail.com>, 2005, 2008
 msgid ""
@@ -12,8 +12,8 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-07-07 12:01+0200\n"
 "PO-Revision-Date: 2013-03-15 03:28+0000\n"
-"Last-Translator: uǝsıɯoʎ(読み専) <hallconnen2+transifex@gmail.com>\n"
-"Language-Team: Japanese (http://www.transifex.com/projects/p/MATE/language/ja/)\n"
+"Last-Translator: ABE Tsunehiko\n"
+"Language-Team: Japanese (http://www.transifex.com/mate/MATE/language/ja/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
