--- a/po/ky.po
+++ b/po/ky.po
@@ -13,7 +13,7 @@ msgstr ""
 "POT-Creation-Date: 2012-07-07 12:01+0200\n"
 "PO-Revision-Date: 2013-04-22 01:52+0000\n"
 "Last-Translator: chingis\n"
-"Language-Team: Kirgyz (http://www.transifex.com/projects/p/MATE/language/ky/)\n"
+"Language-Team: Kyrgyz (http://www.transifex.com/mate/MATE/language/ky/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
