--- a/po/ne.po
+++ b/po/ne.po
@@ -3,24 +3,24 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER, 2005.
-# Ganesh Ghimire <gghimire@gmail.com>, 2005.
-# Jaydeep Bhusal <zaydeep@hotmail.com>, 2005.
-# Shiva  Pokharel <pokharelshiva@hotmail.com>, 2005.
-# Shyam Krishna Bal <shyamkrishna_bal@yahoo.com>, 2006.
+# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER, 2005
+# Ganesh Ghimire <gghimire@gmail.com>, 2005
+# Jaydeep Bhusal <zaydeep@hotmail.com>, 2005
+# Shiva  Pokharel <pokharelshiva@hotmail.com>, 2005
+# Shyam Krishna Bal <shyamkrishna_bal@yahoo.com>, 2006
 msgid ""
 msgstr ""
 "Project-Id-Version: MATE Desktop Environment\n"
-"Report-Msgid-Bugs-To: https://github.com/mate-desktop/\n"
+"Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-07-07 12:01+0200\n"
 "PO-Revision-Date: 2012-07-07 10:02+0000\n"
 "Last-Translator: Stefano Karapetsas <stefano@karapetsas.com>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"Language-Team: Nepali (http://www.transifex.com/mate/MATE/language/ne/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: ne\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #. From http://code.google.com/p/gnome-colors/
 #: ../abstract/mate-abstract.xml.in.in.h:2
