--- a/po/oc.po
+++ b/po/oc.po
@@ -3,28 +3,29 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
-# Benoît Dejean <TazForEver@dlfp.org>, 2005.
-# Stéphane Raimbault <stephane.raimbault@free.fr>, 2006.
-# Thierry Moisan <thierryn@videotron.ca>, 2005.
-# Yannig Marchegay (Kokoyaya) <yannig@marchegay.org>, 2007, 2010.
+# Benoît Dejean <TazForEver@dlfp.org>, 2005
+# Cédric Valmary <cvalmary@yahoo.fr>, 2015
+# Stéphane Raimbault <stephane.raimbault@free.fr>, 2006
+# Thierry Moisan <thierryn@videotron.ca>, 2005
+# Yannig Marchegay (Kokoyaya) <yannig@marchegay.org>, 2007, 2010
 msgid ""
 msgstr ""
 "Project-Id-Version: MATE Desktop Environment\n"
-"Report-Msgid-Bugs-To: https://github.com/mate-desktop/\n"
+"Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-07-07 12:01+0200\n"
-"PO-Revision-Date: 2012-07-07 10:02+0000\n"
-"Last-Translator: Stefano Karapetsas <stefano@karapetsas.com>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"PO-Revision-Date: 2015-11-19 10:07+0000\n"
+"Last-Translator: Cédric Valmary <cvalmary@yahoo.fr>\n"
+"Language-Team: Occitan (post 1500) (http://www.transifex.com/mate/MATE/language/oc/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: oc\n"
-"Plural-Forms: nplurals=2; plural=(n > 1)\n"
+"Plural-Forms: nplurals=2; plural=(n > 1);\n"
 
 #. From http://code.google.com/p/gnome-colors/
 #: ../abstract/mate-abstract.xml.in.in.h:2
 msgid "Arc"
-msgstr ""
+msgstr "Arc"
 
 #: ../abstract/mate-abstract.xml.in.in.h:3
 msgid "Flow"
@@ -70,7 +71,7 @@ msgstr ""
 #. You might want to translate it into the equivalent words of your language
 #: ../nature/mate-nature.xml.in.in.h:6
 msgid "Green Meadow"
-msgstr "Prat vèrd"
+msgstr "Prat verd"
 
 #: ../nature/mate-nature.xml.in.in.h:7
 msgid "Aqua"
