--- a/po/pl.po
+++ b/po/pl.po
@@ -3,21 +3,22 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
-# Piotr Zaryk <pzaryk@aviary.pl>, 2008.
-# Robert Strojec <ross606@gmail.com>, 2012.
+# Bogusław B. <penknife1@gmail.com>, 2012
+# Piotr Zaryk <pzaryk@aviary.pl>, 2008
+# Robert Strojec <ross606@gmail.com>, 2012
 msgid ""
 msgstr ""
 "Project-Id-Version: MATE Desktop Environment\n"
-"Report-Msgid-Bugs-To: https://github.com/mate-desktop/\n"
+"Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-07-07 12:01+0200\n"
-"PO-Revision-Date: 2012-07-07 10:02+0000\n"
-"Last-Translator: Stefano Karapetsas <stefano@karapetsas.com>\n"
-"Language-Team: Polish (http://www.transifex.com/projects/p/MATE/language/pl/)\n"
+"PO-Revision-Date: 2012-10-31 10:47+0000\n"
+"Last-Translator: Bogusław B. <penknife1@gmail.com>\n"
+"Language-Team: Polish (http://www.transifex.com/mate/MATE/language/pl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: pl\n"
-"Plural-Forms: nplurals=3; plural=(n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2)\n"
+"Plural-Forms: nplurals=3; plural=(n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 
 #. From http://code.google.com/p/gnome-colors/
 #: ../abstract/mate-abstract.xml.in.in.h:2
@@ -46,11 +47,11 @@ msgstr "Fale"
 
 #: ../desktop/mate-desktop.xml.in.in.h:1
 msgid "No Desktop Background"
-msgstr ""
+msgstr "Brak Tła Pulpitu"
 
 #: ../desktop/mate-desktop.xml.in.in.h:2
 msgid "Green Traditional"
-msgstr ""
+msgstr "Tradycyjna Zieleń"
 
 #: ../desktop/mate-desktop.xml.in.in.h:3
 msgid "Stripes"
