--- a/po/pt.po
+++ b/po/pt.po
@@ -3,21 +3,22 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
-# Duarte Loreto <happyguy_pt@hotmail.com>, 2004, 2006, 2008.
-# Sérgio Marques <smarquespt@gmail.com>, 2012.
+# crolidge, 2014
+# Duarte Loreto <happyguy_pt@hotmail.com>, 2004, 2006, 2008
+# Sérgio Marques <smarquespt@gmail.com>, 2012
 msgid ""
 msgstr ""
 "Project-Id-Version: MATE Desktop Environment\n"
-"Report-Msgid-Bugs-To: https://github.com/mate-desktop/\n"
+"Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-07-07 12:01+0200\n"
-"PO-Revision-Date: 2012-07-07 10:02+0000\n"
-"Last-Translator: Stefano Karapetsas <stefano@karapetsas.com>\n"
-"Language-Team: Portuguese (http://www.transifex.com/projects/p/MATE/language/pt/)\n"
+"PO-Revision-Date: 2014-03-02 20:09+0000\n"
+"Last-Translator: crolidge\n"
+"Language-Team: Portuguese (http://www.transifex.com/mate/MATE/language/pt/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: pt\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #. From http://code.google.com/p/gnome-colors/
 #: ../abstract/mate-abstract.xml.in.in.h:2
@@ -46,11 +47,11 @@ msgstr "Ondas"
 
 #: ../desktop/mate-desktop.xml.in.in.h:1
 msgid "No Desktop Background"
-msgstr ""
+msgstr "Sem fundo no ambiente de trabalho"
 
 #: ../desktop/mate-desktop.xml.in.in.h:2
 msgid "Green Traditional"
-msgstr ""
+msgstr "Verde tradicional"
 
 #: ../desktop/mate-desktop.xml.in.in.h:3
 msgid "Stripes"
@@ -61,7 +62,7 @@ msgstr "Riscas"
 #. You might want to translate it into the equivalent words of your language
 #: ../nature/mate-nature.xml.in.in.h:3
 msgid "Fresh Flower"
-msgstr "Flor"
+msgstr "Flor fresca"
 
 #. Translators: This is the name of a desktop background image that shows a
 #. green meadow.
