--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -6,7 +6,7 @@
 # Alexandre Folle de Menezes <afmenez@terra.com.br>, 2006
 # Evandro Fernandes Giovanini <evandrofg@ig.com.br>, 2006
 # Fabrizzio Alphonsus Soares <fabrizzio.soares@gmail.com>, 2012
-# Pygmalion, 2014
+# Marcus Vinícius Marques, 2014
 # Og Maciel <ogmaciel@gnome.org>, 2008
 # Raphael Higino <raphaelh@uai.com.br>, 2005
 # vitorgatti <vitorgatti@yahoo.com.br>, 2012
@@ -16,8 +16,8 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-07-07 12:01+0200\n"
 "PO-Revision-Date: 2014-01-13 04:17+0000\n"
-"Last-Translator: Pygmalion\n"
-"Language-Team: Portuguese (Brazil) (http://www.transifex.com/projects/p/MATE/language/pt_BR/)\n"
+"Last-Translator: Marcus Vinícius Marques\n"
+"Language-Team: Portuguese (Brazil) (http://www.transifex.com/mate/MATE/language/pt_BR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
