--- a/po/sl.po
+++ b/po/sl.po
@@ -11,8 +11,8 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-07-07 12:01+0200\n"
 "PO-Revision-Date: 2014-02-19 18:33+0000\n"
-"Last-Translator: jierro <jierro@windowslive.com>\n"
-"Language-Team: Slovenian (http://www.transifex.com/projects/p/MATE/language/sl/)\n"
+"Last-Translator: Damir Jerovšek <jierro@windowslive.com>\n"
+"Language-Team: Slovenian (http://www.transifex.com/mate/MATE/language/sl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
