--- a/po/sv.po
+++ b/po/sv.po
@@ -6,14 +6,15 @@
 # Christian Rose <menthos@menthos.com>, 2004
 # Daniel Nylander <po@danielnylander.se>, 2006, 2008
 # Erik, 2014
+# Kristoffer Grundström <kristoffer.grundstrom1983@gmail.com>, 2015
 msgid ""
 msgstr ""
 "Project-Id-Version: MATE Desktop Environment\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-07-07 12:01+0200\n"
-"PO-Revision-Date: 2014-06-25 19:00+0000\n"
-"Last-Translator: Erik\n"
-"Language-Team: Swedish (http://www.transifex.com/projects/p/MATE/language/sv/)\n"
+"PO-Revision-Date: 2015-05-25 04:29+0000\n"
+"Last-Translator: Kristoffer Grundström <kristoffer.grundstrom1983@gmail.com>\n"
+"Language-Team: Swedish (http://www.transifex.com/mate/MATE/language/sv/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -23,7 +24,7 @@ msgstr ""
 #. From http://code.google.com/p/gnome-colors/
 #: ../abstract/mate-abstract.xml.in.in.h:2
 msgid "Arc"
-msgstr ""
+msgstr "Arc"
 
 #: ../abstract/mate-abstract.xml.in.in.h:3
 msgid "Flow"
