--- a/po/uk.po
+++ b/po/uk.po
@@ -4,16 +4,16 @@
 # 
 # Translators:
 # Yarema aka Knedlyk <yupadmin@gmail.com>, 2012
-# zubr139 <zubr139@ukr.net>, 2012
-# Koljan1970 <Stuartlittle1970@gmail.com>, 2013
+# zubr139, 2012
+# Микола Ткач <Stuartlittle1970@gmail.com>, 2013
 msgid ""
 msgstr ""
 "Project-Id-Version: MATE Desktop Environment\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-07-07 12:01+0200\n"
-"PO-Revision-Date: 2013-06-17 17:47+0000\n"
-"Last-Translator: Koljan1970 <Stuartlittle1970@gmail.com>\n"
-"Language-Team: Ukrainian (http://www.transifex.com/projects/p/MATE/language/uk/)\n"
+"PO-Revision-Date: 2016-03-27 17:41+0000\n"
+"Last-Translator: Микола Ткач <Stuartlittle1970@gmail.com>\n"
+"Language-Team: Ukrainian (http://www.transifex.com/mate/MATE/language/uk/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
