--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,6 @@
-1.15.0
+1.16.0
 
-   * Sync translations with transifex
+   * Translations update
 
 1.14.0
    * Add new languages and sync translations with transiflex
