--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,8 @@
 ### mate-backgrounds 1.19.0
 
+   * Translations update
+   * Restore Polish translation credits from GNOME
+
 ### mate-backgrounds 1.18.0
 
    * Translations update
